@@ -1,3 +1,11 @@
+2012-10-23  Kent Tamura  <tkent@chromium.org>
+
+        Update binding test results for r132194
+        https://bugs.webkit.org/show_bug.cgi?id=100097
+
+        * bindings/scripts/test/V8/V8TestObj.cpp:
+        (WebCore::V8TestObj::installPerContextProperties):
+
 2012-10-23  Alexander Pavlov  <apavlov@chromium.org>
 
         Web Inspector: Sass can only resolve same folder paths
